--- a/css/cssCustom.css
+++ b/css/cssCustom.css
@@ -1,20 +1,29 @@
 body{
     background-color: #2e393a;
     color: #b6d3d6;
+    background-image: url(../image/1.jpg);
+    background-repeat: no-repeat;
+    background-size: 100%;
+    z-index: -1;
 }
 
 h1{
     text-align: center;
-    text-shadow: 2px 2 #25969e;
+    /*text-shadow: 2px 2px #25969e;*/
+    text-shadow: 0 0 3px #FF0000, 0 0 5px #0000FF;
+    width: auto;
+    z-index: 2;
 }
 .blackDiv{
     text-align: center;
     color: burlywood;
     background-color: black;
+    opacity: 0.6;
     border-radius: 5%;
 }
 .container{
     border: solid 2px;
+    
 }
 .col-sm-1{
     border: solid 1px;
